# ca5

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  main.yml
src/: main.cpp  myplot.cpp  myplot.h  myreader.cpp  myreader.h
tests/: data.csv  test1.cpp
